<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipeTest.TestFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="166dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/seongsil"
        android:layout_marginTop="72dp"
        android:text="나트륨 섭취 자가진단 테스트"
        android:textColor="#070000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/seongsil"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="124dp"
        android:text="@string/test_explain"
        android:textColor="#070000"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanation">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/chatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E4D5B0"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkList1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item1"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item2"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item3"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item4"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item5"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList6"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item6"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList7"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/test_item7"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList8"
                    android:layout_width="wrap_content"
                    android:layout_height="76dp"
                    android:text="@string/test_item8"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkList9"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/test_item9"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout">

        <Button
            android:id="@+id/resultBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="결과 확인"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>